src/test/resources/frontendReference/invalid/semanticErr/imports/importedClassAlreadyDeclared.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
